--- a/Homepage.html
+++ b/Homepage.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Coastal German Shepherd Rescue</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,13 +11,38 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="Homepage.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="Homepage.css">
 
 
 </head>
 
 <body>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="Homepage.html">LOGO HERE<span class="sr-only">Coastal German Shepherd Rescue</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="AvaDogs.html">Adopt</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Donate</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Foster</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Volunteer</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Events</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
     
     <script type="text/javascript" src="jquery.lazy.min.js"></script>
