--- a/form1.html
+++ b/form1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Coastal German Shepherd Rescue: View Dogs</title>
+    <title>Coastal German Shepherd Rescue: Available Dogs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
@@ -13,7 +13,7 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Muli:200,200i,400,400i,900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="ViewDogs.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="form.css" />
 
 
 </head>
