--- a/AvaDogs.html
+++ b/AvaDogs.html
@@ -77,35 +77,32 @@
                 <div class="container">
                     <div class="row">
                       <div class="col-sm">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="images/dog13.jpg" alt="Card image cap" >
+                        <div class="card text-center" style="width: 18rem;">
+                          <a href="ViewDogs.html"><img class="card-img-top shadow" src="images/dog13.jpg" alt="Evelyn"></a>
                             <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <a href="ViewDogs.html" class="btn btn-lady">Evelyn <i class="fas fa-venus"></i></a>
+                              <p class="card-text">AGE: 6-7 years-old</p>
                             </div>
                           </div>
                       </div>
                       <div class="col-sm">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="images/dog2.jpg" alt="Card image cap">
+                        <div class="card text-center" style="width: 18rem;">
+                          <a href="ViewDogs.html"><img class="card-img-top shadow" src="images/dog2.jpg" alt="Steven"></a>
                             <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <a href="ViewDogs.html" class="btn btn-gent">Steven <i class="fas fa-mars"></i></a>
+                              <p class="card-text">AGE: 6-7 years-old</p>
                             </div>
                           </div>
                       </div>
                       <div class="col-sm">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="images/dog10.JPG" alt="Card image cap">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <div class="card text-center" style="width: 18rem;">
+                              <a href="ViewDogs.html"><img class="card-img-top shadow" src="images/dog1.jpg" alt="Steven"></a>
+                              <div class="card-body">
+                                  <a href="ViewDogs.html" class="btn btn-gent">Chris <i class="fas fa-mars"></i></a>
+                                <p class="card-text">AGE: 12-13 years-old</p>
+                              </div>
                             </div>
-                          </div>
-                      </div>
+                        </div>
                     </div>
                   </div>
 
