--- a/Homepage.html
+++ b/Homepage.html
@@ -21,7 +21,7 @@
 <body style="background: #C6C5B9">
     <nav class="navbar sticky-top navbar-expand-lg bg-coast navbar-dark drop-shadow">
         <a class="navbar-brand" href="Homepage.html">
-            <img src="images/logo.svg" height="48px" alt="Coastal German Shepherd Rescue">
+            <img src="images/logo.svg" height="85px" alt="Coastal German Shepherd Rescue">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -66,10 +66,10 @@
         </div>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/Dog0.jpg); background-size: 100%">
+    <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <h1>Coastal German Shepherd Rescue</h1>
                     <button type="button" class="btn btn-coast0 btn-lg">Learn More</button>
                 </div>
@@ -88,6 +88,8 @@
             </div>
         </div>
     </div>
+
+    
 
 
     <script type="text/javascript" src="jquery.lazy.min.js"></script>
