--- a/form1.html
+++ b/form1.html
@@ -19,8 +19,11 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg bg-coast navbar-dark drop-shadow">
-            <a class="navbar-brand" href="Homepage.html"><img src="images/logo.svg" height="48px" alt="Coastal German Shepherd Rescue"></a>
+        <a href="Homepage.html"><div class="logo sticky-top shadow"><img src="images/logo.png" height="80px" alt="Coastal German Shepherd Rescue"></div></a>
+        <nav class="navbar sticky-top navbar-expand-lg bg-coast navbar-dark drop-shadow">
+            <a class="navbar-brand" href="Homepage.html">
+                <img src="images/logosm.svg" height="48px" alt="Coastal German Shepherd Rescue">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
