--- a/Homepage.html
+++ b/Homepage.html
@@ -19,9 +19,10 @@
 </head>
 
 <body style="background: #C6C5B9">
+    <a href="Homepage.html"><div class="logo sticky-top shadow"><img src="images/logo.png" height="80px" alt="Coastal German Shepherd Rescue"></div></a>
     <nav class="navbar sticky-top navbar-expand-lg bg-coast navbar-dark drop-shadow">
         <a class="navbar-brand" href="Homepage.html">
-            <img src="images/logo.svg" height="85px" alt="Coastal German Shepherd Rescue">
+            <img src="images/logosm.svg" height="48px" alt="Coastal German Shepherd Rescue">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
