--- a/ViewDogs.html
+++ b/ViewDogs.html
@@ -64,6 +64,48 @@
             </div>
     </nav>
 
+    <div class="container-athena">
+        <div class="row">
+        <div class="col-sm">
+            <div class="card text-center" style="width: 18rem;">
+            <a href="ViewDogs.html"><img class="card-img-top shadow" src="images/Athena.jpg" alt="Evelyn"></a>
+                <div class="card-body">
+                    <a href="ViewDogs.html" class="btn btn-lady">Athena <i class="fas fa-venus"></i></a>
+                <p class="card-text">AGE: 1-2 years-old</p>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>     
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100 h-100" src="images/Athena1.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 h-100" src="images/Athena2.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 h-100" src="images/Athena3.jpg" alt="Third slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        
+
     
     <script type="text/javascript" src="jquery.lazy.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
