--- a/AvaDogs.html
+++ b/AvaDogs.html
@@ -79,8 +79,8 @@
                 
                 <div class="container">
                         <div class="row">
-                                <div class="col-2-sm">
-                                  <div class="card text-center" style="width: 18rem;">
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                                  <div class="card mx-auto text-center" style="width: 18rem;">
                                     <a href="ViewDogs.html"><img class="card-img-top shadow" src="images/dog13.jpg" alt="Evelyn"></a>
                                       <div class="card-body">
                                           <a href="ViewDogs.html" class="btn btn-lady">Evelyn <i class="fas fa-venus"></i></a>
@@ -88,8 +88,8 @@
                                       </div>
                                     </div>
                                 </div>
-                                <div class="col-2-sm">
-                                  <div class="card text-center" style="width: 18rem;">
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                                  <div class="card mx-auto text-center" style="width: 18rem;">
                                     <a href="ViewDogs.html"><img class="card-img-top shadow" src="images/dog2.jpg" alt="Steven"></a>
                                       <div class="card-body">
                                           <a href="ViewDogs.html" class="btn btn-gent">Steven <i class="fas fa-mars"></i></a>
@@ -97,8 +97,8 @@
                                       </div>
                                     </div>
                                 </div>
-                                <div class="col-2-sm">
-                                    <div class="card text-center" style="width: 18rem;">
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                                    <div class="card mx-auto text-center" style="width: 18rem;">
                                         <a href="ViewDogs.html"><img class="card-img-top shadow" src="images/dog1.jpg" alt="Steven"></a>
                                         <div class="card-body">
                                             <a href="ViewDogs.html" class="btn btn-gent">Chris <i class="fas fa-mars"></i></a>
