Edited ViewDogs Page
Added padding, button, and some text

--- a/ViewDogs.html
+++ b/ViewDogs.html
@@ -71,7 +71,11 @@
                           <img class="card-img-top shadow" src="images/dog13.jpg" alt="Evelyn">
                             <div class="card-body">
                                 <div class="btn btn-lady pointer">Athena <i class="fas fa-venus"></i></div>
-                              <p class="card-text">AGE: 1-2 years-old</p>
+                              <p class="card-text">
+                                Age: 1-2 years-old <br>
+                                Color: Black <br>
+                              </p>
+                              
                             </div>
                           </div>
                       </div>
@@ -101,7 +105,10 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
+                        <button type="button" class="btn btn-ask">Ask About Me</button>
+
                     </div>
+                    
         </div>
 
         </div>
