--- a/Confirmation.html
+++ b/Confirmation.html
@@ -75,7 +75,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto text-center">
                 <h1 style="padding-top: 2%">Congratulations!</h1>
-                <img src="images/Dog13.jpg" height="500px" style="margin: 2%">
+                <img src="images/dog13.jpg" height="500px" style="margin: 2%">
             </div>
         </div>
 
