--- a/AvaDogs.html
+++ b/AvaDogs.html
@@ -106,6 +106,15 @@
                                         </div>
                                       </div>
                                   </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                                    <div class="card mx-auto text-center" style="width: 18rem;">
+                                      <a href="ViewDogs.html"><img class="card-img-top shadow" src="images/Athena.jpg" alt="Athena"></a>
+                                        <div class="card-body">
+                                            <a href="ViewDogs.html" class="btn btn-lady">Athena <i class="fas fa-venus"></i></a>
+                                          <p class="card-text">AGE: 6-7 years-old</p>
+                                        </div>
+                                      </div>
+                                  </div>
                         </div>
                   </div>
 
