--- a/Homepage.html
+++ b/Homepage.html
@@ -96,6 +96,48 @@
         </div>
     </div>
 
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+
+                <div class="card mx-auto" style="width: 18rem; height: 33rem;">
+                    <img class="card-img-top align-center" src="images/card1.png" alt="Card image cap">
+                    <div class="card-body text-center">
+                        <h5 class="card-title text-center">Support us every time you shop on Amazon!</h5>
+                        <p class="card-text text-left">Support our rescue at no cost to you.</p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-sm">
+
+                <div class="card mx-auto" style="width: 18rem; height: 33rem">
+                    <img class="card-img-top" src="images/card2.png" alt="Card image cap">
+                    <div class="card-body text-center">
+                        <h5 class="card-title text-center">Support us by using Chewy.com!</h5>
+                        <p class="card-text text-left"><br>Are you looking for quality dog food at discounted pricing?</p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-sm">
+
+                <div class="card mx-auto" style="width: 18rem; height: 33rem;">
+                    <img class="card-img-top" src="images/card3.png" alt="Card image cap">
+                    <div class="card-body text-center">
+                        <h5 class="card-title text-center">CharityRaggs Fundraiser!</h5>
+                        <p class="card-text text-left"><br>your purchase will be donated to Coastal GSR!</p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+   </div>
+
 <!--Footer-->
 <footer class="page-footer font-small  pt-4 mt-4">
 
