--- a/AvaDogs.html
+++ b/AvaDogs.html
@@ -111,7 +111,7 @@
                                         <p class="card-text">AGE: 6-7 years-old</p>
                                     </div>
                                 </div>
-
+                            </div>
                                 <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                                     <div class="card mx-auto text-center" style="width: 18rem;">
                                         <a href="ViewDogs.html"><img class="card-img-top shadow" src="images/dog1.jpg" alt="Steven"></a>
@@ -126,7 +126,7 @@
                                       <a href="ViewDogs.html"><img class="card-img-top shadow" src="images/Athena.jpg" alt="Athena"></a>
                                         <div class="card-body">
                                             <a href="ViewDogs.html" class="btn btn-lady">Athena <i class="fas fa-venus"></i></a>
-                                          <p class="card-text">AGE: 6-7 years-old</p>
+                                          <p class="card-text">AGE: 1-2 years-old</p>
                                         </div>
                                       </div>
                                   </div>
