--- a/Homepage.html
+++ b/Homepage.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body>
+<body style="background: #f5f5f5">
     <a href="Homepage.html"><div class="logo sticky-top shadow"><img src="images/logo.png" height="80px" alt="Coastal German Shepherd Rescue"></div></a>
     <nav class="navbar sticky-top navbar-expand-lg bg-coast navbar-dark drop-shadow">
         <a class="navbar-brand" href="Homepage.html">
