--- a/Confirmation.html
+++ b/Confirmation.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body style="background: #C6C5B9">
+<body class="blurb">
     <a href="Homepage.html">
         <div class="logo sticky-top shadow">
             <img src="images/logo.png" height="80px" alt="Coastal German Shepherd Rescue">
