--- a/Homepage.html
+++ b/Homepage.html
@@ -67,7 +67,7 @@
         </div>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid shadow">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <div class="container-fluid" style="background: #C6C5B9">
+    <div class="container-fluid blurb">
         <div class="row" style="justify-content: center">
             <div class="col-lg-6" style="padding:30px;">
                 <p>Founded in 2004, Coastal German Shepherd Rescue is a non-profit 501(c)3 public charity based in Orange County,
