--- a/AvaDogs.html
+++ b/AvaDogs.html
@@ -349,7 +349,7 @@
 
 
     <!--Footer-->
-    <footer class="page-footer font-small  pt-4 mt-4">
+    <footer class="page-footer font-small  pt-4">
 
         <!--Footer Links-->
         <div class="container text-center text-md-left">
