--- a/ViewDogs.html
+++ b/ViewDogs.html
@@ -52,7 +52,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
-                </li>
+                </li> 
                 <li class="nav-item">
                     <a class="nav-link" href="#">Events</a>
                 </li>
@@ -66,7 +66,7 @@
 
     <div class="container">
         <div class="row">
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="col-lg-4">
                         <div class="card mx-auto text-center" style="width: 18rem;">
                           <img class="card-img-top shadow" src="images/Athena.jpg" alt="Evelyn">
                             <div class="card-body">
