--- a/form3.html
+++ b/form3.html
@@ -68,110 +68,54 @@
 <!-- Status Bar -->
 <div class="statusBar">
     <div class="progress" style="height: 40px;"> 
-        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" 
-        aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 90%;" 
+        aria-valuenow="90%" aria-valuemin="0" aria-valuemax="100">90%</div>
     </div>
 </div>
 
 <!-- Form -->
 <form>
     <div class="application">
-    <h3> Basic Information </h3><br>
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="name">First Name</label>
-        <input type="text" class="form-control">
-      </div>
-      <div class="form-group col-md-6">
-        <label for="name">Last Name</label>
-        <input type="text" class="form-control">
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="inputAddress">Address</label>
-      <input type="text" class="form-control" id="inputAddress">
-    </div>
-    <div class="form-group">
-      <label for="inputAddress2">Address 2</label>
-      <input type="text" class="form-control" id="inputAddress2">
-    </div>
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="inputCity">City</label>
-        <input type="text" class="form-control" id="inputCity">
-      </div>
-      <div class="form-group col-md-4">
-        <label for="inputState">State</label>
-        <select id="inputState" class="form-control">
-          <option selected>Choose...</option>
-          <option>Alabama</option>
-          <option>Alaska</option>
-          <option>Arizona</option>
-          <option>Arkansas</option>
-          <option>California</option>
-          <option>Colorado</option>
-          <option>Connecticut</option>
-          <option>Delaware</option>
-          <option>Florida</option>
-          <option>Georgia</option>
-          <option>Hawaii</option>
-          <option>Idaho</option>
-          <option>Illinois</option>
-          <option>Indiana</option>
-          <option>Iowa</option>
-          <option>Kansas</option>
-          <option>Kentucky</option>
-          <option>Louisiana</option>
-          <option>Maine</option>
-          <option>Maryland</option>
-          <option>Massachusetts</option>
-          <option>Michigan</option>
-          <option>Minnesota</option>
-          <option>Mississippi</option>
-          <option>Missouri</option>
-          <option>Montana</option>
-          <option>Nebraska</option>
-          <option>Nevada</option>
-          <option>New Hampshire</option>
-          <option>New Jersey</option>
-          <option>New Mexico</option>
-          <option>New York</option>
-          <option>North Carolina</option>
-          <option>North Dakota</option>
-          <option>Ohio</option>
-          <option>Oklahoma</option>
-          <option>Oregon</option>
-          <option>Pennsylvania</option>
-          <option>Rhode Island</option>
-          <option>South Carolina</option>
-          <option>South Dakota</option>
-          <option>Tennessee</option>
-          <option>Texas</option>
-          <option>Utah</option>
-          <option>Vermont</option>
-          <option>Virginia</option>
-          <option>Washington</option>
-          <option>West Virginia</option>
-          <option>Wisconsin</option>
-          <option>Wyoming</option>
-        </select>
-      </div>
-      <div class="form-group col-md-2">
-        <label for="inputZip">Zip</label>
-        <input type="text" class="form-control" id="inputZip">
-      </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4">
+        <h3>House Information</h3><br>
+        <div class="form-group">
+            <label for="checkbox">Type of home:</label>
+            <label class="checkbox-inline"><input type="checkbox">House</label>
+            <label class="checkbox-inline"><input type="checkbox">Apartment</label>
+            <label class="checkbox-inline"><input type="checkbox">Other</label>
         </div>
-        <div class="form-group col-md-6">
-            <label for="number">Phone Number</label>
-            <input type="text" class="form-control">
-        </div>
-        <a href="form2.html" class="btn btn-next" role="button">Next</a>
 
+        <div class="form-group">
+            <label for="checkbox">Do you own or rent?</label>
+            <label class="checkbox-inline"><input type="checkbox">Own</label>
+            <label class="checkbox-inline"><input type="checkbox">Rent</label>
+        </div>
+
+        <div class="form-group">
+            <label for="checkbox">Are dogs allowed in complex or HOA?</label>
+            <label class="checkbox-inline"><input type="checkbox">Yes</label>
+            <label class="checkbox-inline"><input type="checkbox">No</label>
+        </div>
+
+        <div class="form-group">
+            <label for="checkbox">Do you have children?</label>
+            <label class="checkbox-inline"><input type="checkbox">Yes</label>
+            <label class="checkbox-inline"><input type="checkbox">No</label>
+        </div>
+    
+        <div class="form-group">
+            <label for="checkbox">Do you have any pet?</label>
+            <label class="checkbox-inline"><input type="checkbox">Yes</label>
+            <label class="checkbox-inline"><input type="checkbox">No</label>
+            
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">If yes, please tell us about your pet(s):</label>
+                <textarea class="form-control" rows="3" placeholder="what kind of pet? (dog,cat,fish, or other), gender, age, breed"></textarea>
+            </div>
+        </div>
+
+        <!-- Buttons -->
+        <a href="form2.html" class="btn btn-outline-next" role="button">Previous</a>
+        <a href="#" class="btn btn-submit" role="button">Submit</a>
     </div>
 </form>
 
