Updated forms and confirmation
Revised both pages

--- a/Confirmation.html
+++ b/Confirmation.html
@@ -75,7 +75,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto text-center">
                 <h1 style="padding-top: 2%">Congratulations!</h1>
-                <img src="images/dog13.jpg" height="500px" style="margin: 2%; border-radius: 50%;" class="shadow">
+                <img src="images/dog13.jpg" height="350px" style="margin: 2%; border-radius: 50%;" class="shadow">
             </div>
         </div>
 
@@ -84,8 +84,8 @@
                 <h1>Your Application has been sent!</h1>
                 <h3>What's next?</h3>
                 <p>1. We will review your application and let you know whether or not it has been accepted
-                    <br> 2. If your application is accepted we will contact you to schedule a visit to our office
-                    <br> 3.
+                    <br> 2. If your application is accepted we will contact you to schedule a home inspection
+                    <br> 3. Once home inspection passes, we will contact you to schedule a visit to our office
                 </p>
             </div>
         </div>
