--- a/form2.html
+++ b/form2.html
@@ -85,7 +85,7 @@
         </div>
         <div class="row">
             <div class="col-6">
-                <a href="form1.html" class="btn btn-lg btn-outline-next" role="button">Previous</a>
+                <a href="form1.html" class="btn btn-lg btn-outline-previous" role="button">Previous</a>
             </div>
              <div class="col-6 text-right">
                 <a href="form3.html" class="btn btn-lg btn-next" role="button">Next</a>
