--- a/form1.html
+++ b/form1.html
@@ -77,16 +77,16 @@
     <h3> Basic Information </h3><br>
     <div class="form-row">
       <div class="form-group col-md-6">
-        <label for="name">First Name</label>
+        <label for="name">First Name*</label>
         <input type="text" class="form-control">
       </div>
       <div class="form-group col-md-6">
-        <label for="name">Last Name</label>
+        <label for="name">Last Name*</label>
         <input type="text" class="form-control">
       </div>
     </div>
     <div class="form-group">
-      <label for="inputAddress">Address</label>
+      <label for="inputAddress">Address*</label>
       <input type="text" class="form-control" id="inputAddress">
     </div>
     <div class="form-group">
@@ -95,11 +95,11 @@
     </div>
     <div class="form-row">
       <div class="form-group col-md-6">
-        <label for="inputCity">City</label>
+        <label for="inputCity">City*</label>
         <input type="text" class="form-control" id="inputCity">
       </div>
       <div class="form-group col-md-4">
-        <label for="inputState">State</label>
+        <label for="inputState">State*</label>
         <select id="inputState" class="form-control">
           <option selected>Choose...</option>
           <option>Alabama</option>
@@ -155,17 +155,17 @@
         </select>
       </div>
       <div class="form-group col-md-2">
-        <label for="inputZip">Zip</label>
+        <label for="inputZip">Zip*</label>
         <input type="text" class="form-control" id="inputZip">
       </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-6">
-            <label for="inputEmail4">Email</label>
+            <label for="inputEmail4">Email*</label>
             <input type="email" class="form-control" id="inputEmail4">
         </div>
         <div class="form-group col-md-6">
-            <label for="number">Phone Number</label>
+            <label for="number">Phone Number*</label>
             <input type="text" class="form-control">
         </div>
     </div>
