--- a/form3.html
+++ b/form3.html
@@ -74,11 +74,9 @@
 </div>
 
 <!-- Form -->
-
-
         <h3>House Information</h3><br>
         <div class="form-group">
-            <label for="checkbox">Type of home:</label>
+            <label for="checkbox">Type of home*:</label>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="Home" id="inlineRadio1" value="option1">
                 <label class="form-check-label" for="inlineRadio1">House</label>
@@ -106,7 +104,7 @@
         </div>
 
         <div class="form-group">
-            <label for="checkbox">Are dogs allowed in complex or HOA?</label>
+            <label for="checkbox">Are dogs allowed in complex or HOA?*</label>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="HOA" id="inlineRadio1" value="option1">
                 <label class="form-check-label" for="inlineRadio1">Yes</label>
@@ -130,7 +128,7 @@
         </div>
     
         <div class="form-group">
-            <label for="checkbox">Do you have any pet(s)?</label>
+            <label for="checkbox">Do you have any pet(s)?*</label>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="pets" id="inlineRadio1" value="option1">
                 <label class="form-check-label" for="inlineRadio1">Yes</label>
@@ -140,14 +138,14 @@
                 <label class="form-check-label" for="inlineRadio2">No</label>
               </div>
             
-            <div class="form-group">
+            <div class="form-group" id="description">
                 <label for="exampleFormControlTextarea1">If yes, please tell us about your pet(s):</label>
-                <textarea class="form-control" rows="3" placeholder="what kind of pet? (dog,cat,fish, or other), gender, age, breed"></textarea>
+                <textarea class="form-control" rows="3" placeholder="what kind of pet (dog, cat, fish, or other)? Gender, Age, Breed"></textarea>
             </div>
         </div>
         <div class="row">
             <div class="col-6">
-                <a href="form2.html" class="btn btn-lg btn-outline-next" role="button">Previous</a>
+                <a href="form2.html" class="btn btn-lg btn-outline-previous" role="button">Previous</a>
             </div>
              <div class="col-6 text-right">
                 <a href="Confirmation.html" class="btn btn-lg btn-next" role="button">Submit</a>
