--- a/ViewDogs.html
+++ b/ViewDogs.html
@@ -162,9 +162,9 @@
             </div>
             <div class="col-4" >
                 <div class="btn-group-vertical">
-                        <button type="button" class="btn btn-adopt">Adopt</button>
-                        <button type="button" class="btn btn-sponsor">Sponsor</button>
-                        <button type="button" class="btn btn-foster">Foster</button>
+                        <a href="form1.html" class="btn btn-lg btn-adopt" role="button">Adopt</a>
+                        <button type="button" class="btn btn-lg btn-sponsor">Sponsor</button>
+                        <button type="button" class="btn btn-lg btn-foster">Foster</button>
                 </div>
             </div>
         </div>
