--- a/Confirmation.html
+++ b/Confirmation.html
@@ -20,11 +20,11 @@
 
 <body class="blurb">
     <a href="Homepage.html">
-        <div class="logo sticky-top shadow">
+        <div class="logo sticky-top">
             <img src="images/logo.png" height="80px" alt="Coastal German Shepherd Rescue">
         </div>
     </a>
-    <nav class="navbar sticky-top navbar-expand-lg bg-coast navbar-dark drop-shadow">
+    <nav class="navbar sticky-top navbar-expand-lg bg-coast navbar-dark">
         <a class="navbar-brand" href="Homepage.html">
             <img src="images/logosm.svg" height="48px" alt="Coastal German Shepherd Rescue">
         </a>
