--- a/Homepage.html
+++ b/Homepage.html
@@ -71,7 +71,7 @@
         </div>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid shadow">
+    <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -84,7 +84,7 @@
 
     <div class="container-fluid blurb">
         <div class="row" style="justify-content: center">
-            <div class="col-lg-6" style="padding:30px;">
+            <div class="col-lg-8" style="padding:30px;">
                 <p>Founded in 2004, Coastal German Shepherd Rescue is a non-profit 501(c)3 public charity based in Orange County,
                     California. We are an all volunteer run organization, with no paid employees, and are dedicated to finding
                     loving homes for abandoned dogs in Southern California. Our rescue exists solely because of your tax
