Revert "Merge branch 'master' of https://github.com/amhilado/CoastalGSR"
This reverts commit 9ac1b3f9e71e33a0f3bfc641402b10272037e19a.

--- a/Homepage.html
+++ b/Homepage.html
@@ -144,31 +144,12 @@
         <div class="row">
             <div class="col-sm-5">
                 <h3>Events</h3>
-
-                <table class="table">
-                    
-                    <tbody>
-                      <tr>
-                        <th scope="row"></th>
-                        <td class="text1">Date:</td>
-                        <td class="text1">Time:</td>
-                        <td class="text1">Location:</td>
-                      </tr>
-                      <tr>
-                        <th scope="row"></th>
-                        <td>May 20</td>
-                        <td>10am-12pm</td>
-                        <td>Petco located at 1192 Irvine Blvd, Tustin, CA 92780</td>
-                      </tr>
-                    </tbody>
-                  </table>
-
-                <!--<div class="events">
+                <div class="events">
                     <p class="text1">Date:</p><span class="text2"> May 20</span>
                     <p class="text1">Time:</p><span class="text2"> 10am-12pm</span>
                     <p class="text1">Location:</p><span class="text2"> Petco located at 1192 Irvine Blvd, Tustin, CA 92780</span>   
-                </div>-->
-                <button type="button" class="btn btn-next btn-lg">More Events</button>
+                </div>
+                <button type="button" class="btn btn-primary">More Events</button>
 
             </div>
             <div class="Shop col-sm-1">
@@ -179,7 +160,7 @@
                 <div class="shopImage">
                     <img src="images/shop.jpg" alt="Merchandies" width="300" height="200">
                 </div>
-                <button type="button" class="btn btn-next btn-lg">Shop</button>
+                <button type="button" class="btn btn-primary">Shop</button>
             </div>
 
         </div>
@@ -192,11 +173,11 @@
             <div class="col-sm">
 
                 <div class="card mx-auto" style="width: 18rem; height: 33rem;">
-                    <img class="card-img-top align-center" src="images/card1.png" alt="Card image cap"><hr>
+                    <img class="card-img-top align-center" src="images/card1.png" alt="Card image cap">
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">Support us every time you shop on Amazon!</h5>
                         <p class="card-text text-left">Support our rescue at no cost to you.</p>
-                        <a href="#" class="btn btn-next btn-lg">Read More</a>
+                        <a href="#" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
 
@@ -204,12 +185,12 @@
             <div class="col-sm">
 
                 <div class="card mx-auto" style="width: 18rem; height: 33rem">
-                    <img class="card-img-top" src="images/card2.png" alt="Card image cap"><hr>
+                    <img class="card-img-top" src="images/card2.png" alt="Card image cap">
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">Support us by using Chewy.com!</h5>
                         <p class="card-text text-left">
                             <br>Are you looking for quality dog food at discounted pricing?</p>
-                        <a href="#" class="btn btn-next btn-lg">Read More</a>
+                        <a href="#" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
 
@@ -217,12 +198,12 @@
             <div class="col-sm">
 
                 <div class="card mx-auto" style="width: 18rem; height: 33rem;">
-                    <img class="card-img-top" src="images/card3.png" alt="Card image cap"><hr>
+                    <img class="card-img-top" src="images/card3.png" alt="Card image cap">
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">CharityRaggs Fundraiser!</h5>
                         <p class="card-text text-left">
                             <br>your purchase will be donated to Coastal GSR!</p>
-                        <a href="#" class="btn btn-next btn-lg">Read More</a>
+                        <a href="#" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
 
