--- a/AvaDogs.html
+++ b/AvaDogs.html
@@ -71,6 +71,14 @@
         </div>
     </nav>
 
+    <div class="container-fluid blurb">
+        <div class="row">
+            <div class="col-10 mx-auto text-center header">
+                <h1>Avaliable Dogs</h1>
+            </div>
+        </div>
+    </div>
+
     <div id="accordion">
 
         <div class="card">
