--- a/ViewDogs.html
+++ b/ViewDogs.html
@@ -145,15 +145,13 @@
 
          <div class="row" id="info">
             <div class="col-4">
-                <div id="about-me">
                     <h2>About Me</h2>
-                    <ul>
-                    <li>Health: <br><span id="animal-health">Up-to-date on vaccinations; spayed</span> </li>
-                    <li>House Trained </li>
-                    <li>Good with Kids </li>
-                    <li>Good with Dogs</li>
-                    <li>Good with Cats</li> </ul>
-                </div>
+                    
+                    <span><h3>Health:</h3> <p>Up-to-date on vaccinations; spayed<p></p></span>
+                    <h3>House Trained</h3>
+                    <h3>Good with Kids</h3>
+                    <h3>Good with Dogs</h3>
+                    <h3>Good with Dogs</h3>
             </div>
             <div class="col-4"  id="my-story">
                 <h2>My Story</h2>
