--- a/Homepage.html
+++ b/Homepage.html
@@ -169,14 +169,14 @@
 
 
             </div>
-            <div class="Shop col-sm-1">
+            <div class="col-sm-1 align-self-center">
                 <div class="vl"></div>
             </div>
             
-            <div class="col-sm-3">   
-                    <img src="images/shop.jpg" alt="Merchandies" width="300" height="200"> 
+            <div class="col-sm-3 align-self-center">   
+                    <img src="images/shop.jpg" alt="Merchandies"  class="shopImg" width="300" height="200"> 
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-3 align-self-center">
                 <h3>Shop Our Merchandies</h3>
 
             <button type="button" class="btn btn-next btn-lg">Shop</button>
@@ -194,7 +194,7 @@
             <div class="col-sm">
 
                 <div class="card mx-auto" style="width: 18rem; height: 33rem;">
-                    <img class="card-img-top align-center" src="images/card1.png" alt="Card image cap">
+                    <img class="card-img-top align-center" src="images/card1.png" alt="Card image cap"><hr>
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">Support us every time you shop on Amazon!</h5>
                         <p class="card-text text-left">Support our rescue at no cost to you.</p>
@@ -206,7 +206,7 @@
             <div class="col-sm">
 
                 <div class="card mx-auto" style="width: 18rem; height: 33rem">
-                    <img class="card-img-top" src="images/card2.png" alt="Card image cap">
+                    <img class="card-img-top" src="images/card2.png" alt="Card image cap"><hr>
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">Support us by using Chewy.com!</h5>
                         <p class="card-text text-left">
@@ -219,7 +219,7 @@
             <div class="col-sm">
 
                 <div class="card mx-auto" style="width: 18rem; height: 33rem;">
-                    <img class="card-img-top" src="images/card3.png" alt="Card image cap">
+                    <img class="card-img-top" src="images/card3.png" alt="Card image cap"><hr>
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">CharityRaggs Fundraiser!</h5>
                         <p class="card-text text-left">
