--- a/form2.html
+++ b/form2.html
@@ -74,7 +74,7 @@
 </div>
 
 <!-- Form -->
-        <h3>Other Information</h3><br>
+        <h3>Additional Information</h3><br>
         <div class="form-group">
         <label for="interest">Dog you are interested in:</label>
         <input type="text" class="form-control">
@@ -83,6 +83,10 @@
             <label for="whyRescueDog">Why do you want to adopt a rescue dog?</label>
             <textarea class="form-control" rows="3"></textarea>
         </div>
+        <div class="form-group">
+            <label for="whyGS">Why do you want a German Shepherd?</label>
+            <textarea class="form-control" rows="3"></textarea>
+          </div>
         <div class="row">
             <div class="col-6">
                 <a href="form1.html" class="btn btn-lg btn-outline-previous" role="button">Previous</a>
