--- a/form3.html
+++ b/form3.html
@@ -74,9 +74,9 @@
 </div>
 
 <!-- Form -->
-        <h3>House Information</h3><br>
+        <h3>Housing Information</h3><br>
         <div class="form-group">
-            <label for="checkbox">Type of home*:</label>
+            <label for="checkbox">Type of home*:</label><br>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="Home" id="inlineRadio1" value="option1">
                 <label class="form-check-label" for="inlineRadio1">House</label>
@@ -92,7 +92,7 @@
         </div>
 
         <div class="form-group">
-            <label for="checkbox">Do you own or rent?</label>
+            <label for="checkbox">Do you own or rent?</label><br>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="Own" id="inlineRadio1" value="option1">
                 <label class="form-check-label" for="inlineRadio1">Own</label>
@@ -104,7 +104,7 @@
         </div>
 
         <div class="form-group">
-            <label for="checkbox">Are dogs allowed in complex or HOA?*</label>
+            <label for="checkbox">Are dogs allowed in complex or HOA?*</label><br>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="HOA" id="inlineRadio1" value="option1">
                 <label class="form-check-label" for="inlineRadio1">Yes</label>
@@ -116,7 +116,7 @@
         </div>
 
         <div class="form-group">
-            <label for="checkbox">Do you have children?</label>
+            <label for="checkbox">Do you have children?</label><br>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="kids" id="inlineRadio1" value="option1">
                 <label class="form-check-label" for="inlineRadio1">Yes</label>
@@ -128,7 +128,7 @@
         </div>
     
         <div class="form-group">
-            <label for="checkbox">Do you have any pet(s)?*</label>
+            <label for="checkbox">Do you have any pet(s)?*</label><br>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="pets" id="inlineRadio1" value="option1">
                 <label class="form-check-label" for="inlineRadio1">Yes</label>
