--- a/AvaDogs.html
+++ b/AvaDogs.html
@@ -41,7 +41,7 @@
                         Adopt
                     </a>
                     <div class="dropdown-menu shadow" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="AvaDogs.html">Avaliable Dogs</a>
+                        <a class="dropdown-item" href="AvaDogs.html">Available Dogs</a>
                         <a class="dropdown-item" href="form1.html">Adoption Application</a>
                         <a class="dropdown-item" href="#">Happy Tales</a>
                     </div>
@@ -74,7 +74,7 @@
     <div class="container-fluid blurb">
         <div class="row">
             <div class="col-10 mx-auto text-center header">
-                <h1>Avaliable Dogs</h1>
+                <h1>Available Dogs</h1>
             </div>
         </div>
     </div>
