--- a/Homepage.html
+++ b/Homepage.html
@@ -41,7 +41,7 @@
                         Adopt
                     </a>
                     <div class="dropdown-menu shadow" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="AvaDogs.html">Avaliable Dogs</a>
+                        <a class="dropdown-item" href="AvaDogs.html">Available Dogs</a>
                         <a class="dropdown-item" href="form1.html">Adoption Application</a>
                         <a class="dropdown-item" href="#">Happy Tales</a>
                     </div>
@@ -99,7 +99,7 @@
             <div class="col-lg-4 col-sm-8">
                 <a class="dog" href="AvaDogs.html">
                     <div class="red deck">
-                        <h2>Availiable
+                        <h2>Available
                             <br>Dogs</h2>
                         <img class="dog1" src="images/DogCard01.png" alt="">
                     </div>
@@ -220,7 +220,7 @@
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">CharityRaggs Fundraiser!</h5>
                         <p class="card-text text-left">
-                            <br>your purchase will be donated to Coastal GSR!</p>
+                            <br>Your purchase will be donated to Coastal GSR!</p>
                         <a href="#" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
