--- a/form3.html
+++ b/form3.html
@@ -35,7 +35,7 @@
                         Adopt
                     </a>
                     <div class="dropdown-menu shadow" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="AvaDogs.html">Avaliable Dogs</a>
+                        <a class="dropdown-item" href="AvaDogs.html">Available Dogs</a>
                         <a class="dropdown-item" href="form1.html">Adoption Application</a>
                         <a class="dropdown-item" href="#">Happy Tales</a>
                     </div>
