--- a/Homepage.html
+++ b/Homepage.html
@@ -72,10 +72,12 @@
     </nav>
 
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+            <div class="layer">
+                </div>
+        <div class="container text-left">
             <div class="row">
-                <div class="col-lg-6">
-                    <h1>Coastal German Shepherd Rescue</h1>
+                <div class="col-lg-7">
+                    <h1>10 Cool Tips for Caring for your Shepherd</h1>
                     <button type="button" class="btn btn-coast0 btn-lg">Learn More</button>
                 </div>
             </div>
