--- a/AvaDogs.html
+++ b/AvaDogs.html
@@ -188,7 +188,7 @@
                             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                                 <div class="card mx-auto text-center" style="width: 18rem;">
                                     <a href="ViewDogs.html">
-                                        <img class="card-img-top shadow" src="images/Dog6.jpg" alt="Ella">
+                                        <img class="card-img-top shadow" src="images/dog6.jpg" alt="Ella">
                                     </a>
                                     <div class="card-body">
                                         <a href="ViewDogs.html" class="btn btn-lady">
@@ -216,7 +216,7 @@
                             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                                 <div class="card mx-auto text-center" style="width: 18rem;">
                                     <a href="ViewDogs.html">
-                                        <img class="card-img-top shadow" src="images/Dog3.jpg" alt="Liam">
+                                        <img class="card-img-top shadow" src="images/dog3.jpg" alt="Liam">
                                     </a>
                                     <div class="card-body">
                                         <a href="ViewDogs.html" class="btn btn-gent">
