--- a/ViewDogs.html
+++ b/ViewDogs.html
@@ -134,7 +134,7 @@
                 <h3>+ House Trained</h3>
                 <h3>+ Good with Kids</h3>
                 <h3>+ Good with Dogs</h3>
-                <h3>+ Good with Dogs</h3>
+                <h3>+ Good with Cats</h3>
             </div>
             <div class="col-lg-6 col-sm-6" id="my-story">
                 <h2>My Story</h2>
